--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ chardet==3.0.4
 Click==7.0
 docopt==0.6.2
 Flask==1.1.1
+Flask-WTF==0.14.3
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
@@ -12,4 +13,5 @@ public==2019.4.13
 requests==2.23.0
 urllib3==1.25.8
 Werkzeug==1.0.0
+WTForms==2.2.1
 yarg==0.1.9
