--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,29 @@
+aniso8601==8.0.0
+attrs==19.3.0
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 dnspython==1.16.0
 docopt==0.6.2
 Flask==1.1.1
+flask-restplus==0.13.0
 Flask-WTF==0.14.3
 idna==2.9
+importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.1
+jsonschema==3.2.0
 MarkupSafe==1.1.1
 mysql-connector-python==8.0.19
 pipreqs==0.4.10
 protobuf==3.6.1
 public==2019.4.13
+pyrsistent==0.16.0
+pytz==2020.1
 requests==2.23.0
 six==1.14.0
 urllib3==1.25.8
-Werkzeug==1.0.0
+Werkzeug==0.16.1
 WTForms==2.2.1
 yarg==0.1.9
+zipp==3.1.0
